# CarManager

./: README.md  pyproject.toml
myproject/: .gitignore  cos.py  pyproject.toml
myproject/gui/: main.py  module.py  styles.css
myproject/gui/scenes/: err.py  module.py  scene_1.py  scene_2.py
myproject/gui/scenes/info/: tmp.json
myproject/gui/scenes/mini_wins/: dialog_win.py  module_win.py
myproject/myproject/gui/: main.py  scene_1.py  scene_2.py  styles.css
myproject/myproject/gui/mini_wins/: dialog_win.py  module_win.py
myproject/myproject/gui/scenes/: module.py  scene_1.py  scene_2.py
myproject/myproject/gui/scenes/mini_wins/: dialog_win.py  module_win.py
myproject/myproject/gui/scenes/txt_files/: months_2.txt
myproject/myproject/gui/txt_files/: months_2.txt
myproject/myproject/trashes/: exp.py  exp2.py  exp3.py  exp_.py
myproject/trashes/: exp2.py
