[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Mikołaj Karapka <mikolaj.karapka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyqt6 = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "myproject.gui.main:main"   
